<resources>
    <string name="app_name">CPK</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="please_define_destinations">
        No destinations phone numbers to send SMS were found.
        \nPlease go to Settings \u27a1 Destination Numbers and define some.
        \nThe format is:
        \n phoneNumber Name
    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_destination_numbers">Destination Numbers</string>
    <string name="pref_description_destination_numbers">[tel:number display] name pairs per line</string>

    <string name="pref_title_dial_open_gate">Open the gate via dial</string>
    <string name="pref_description_dial_open_gate">Call the opening gate special number if
        an SMS with the body equal to the password is received
    </string>

    <string name="pref_title_sms_open_gate">Open the gate via SMS</string>
    <string name="pref_description_sms_open_gate">SMS the opening gate special number if
        an SMS with the body equal to the password is received
    </string>

    <string name="pref_title_confirmation_message">Confirmation message</string>
    <string name="pref_description_confirmation_message">SMS text to send back for confirmation if
        password and sending phone number are accepted</string>

    <string name="pref_title_sms_password">Sms password</string>
    <string name="pref_default_sms_password">Default Password</string>

    <string name="pref_title_open_gate_number">Open gate number</string>
    <string name="pref_default_open_gate_number">+00123456789</string>

    <string name="pref_title_gym_members">Gym members</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
