<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:inputType="textMultiLine"
        android:key="destinations"
        android:title="@string/pref_destination_numbers"
        android:summary="@string/pref_description_destination_numbers"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="dial_open_gate"
        android:summary="@string/pref_description_dial_open_gate"
        android:title="@string/pref_title_dial_open_gate" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="sms_open_gate"
        android:summary="@string/pref_description_sms_open_gate"
        android:title="@string/pref_title_sms_open_gate"
        />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_sms_password"
        android:inputType="text"
        android:key="sms_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sms_password" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_open_gate_number"
        android:inputType="text"
        android:key="open_gate_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_open_gate_number" />

    <EditTextPreference
        android:inputType="textMultiLine"
        android:key="permissions"
        android:title="@string/pref_title_gym_members"
        />



</PreferenceScreen>
